[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concilia = { path = "../lib" }
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
concilia-shared = { path = "../shared" }
rand = "0.8.5"
tracing = "0.1.37"
