[package]
name = "concilia-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["rustls"] }
blake3 = { version = "1.4.1", features = ["rayon"] }
blind-rsa-signatures = "0.15.0"
hashbrown = { version = "0.14.0", features = ["rkyv", "serde"] }
rkyv = { version = "0.7.42", features = ["copy", "validation"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0" }
bs58 = "0.5.0"
rand = "0.8.5"
reqwest = "0.11.20"
serde_bytes = "0.11.12"
kt2 = "1.0.0"
